2009-03-31	Mike Massonnet
Set sensitivity of OK button in action dialog

	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Put the action dialog in the same window group as the settings dialog
		to respect its modal state.
	- panel-plugin/panel-plugin.c(panel_plugin_configure):
		Connect action-name, regex, and buttons add-command/delete-command to
		the new callback cb_set_action_dialog_button_ok to set automatically
		the sensitivity of the OK button in the action dialog.
	- panel-plugin/panel-plugin.c(cb_actions_row_activated):
		Set the entry texts after the commands in the treeview so it
		updates the OK button sensitivity via the entry text changes.
	- panel-plugin/panel-plugin.c(cb_add_command):
		Fix the condition to add a new command and do the same check in
		cb_refresh_command.
	- panel-plugin/panel-plugin.c(cb_set_action_dialog_button_ok):
		Verify that there is a command-name, a valid regex, and at least one
		command to set the OK button sensitive, otherwise not.

2009-03-31	Mike Massonnet
Make Clipman the owner of the clipboard contents

	- panel-plugin/collector.c:
		Rename priv->restoring to priv->internal_change.  Drop function
		_clipman_collector_restore_clipboard in favor of making Clipman
		automatically the owner of the clipboard contents.  This doesn't work
		for the primary clipboard as it would destroy the selection under hand
		thus it will lack this functionnality, but all-in-all this clipboard
		is not as mandatory as the default clipboard.

2009-03-31	Mike Massonnet
Save/Load the history in the correct order

	- panel-plugin/panel-plugin.c(panel_plugin_save):
		Obviously I was sure I did that already, but then no trace in
		the logs, so once again, the history was displayed in the
		reverse order each time the plugin restarted, so the list is
		reversed before being saved.  Also free the memory allocated
		to texts as it has to even if there is no texts to be saved.

2009-03-30	Mike Massonnet